# silicondust-hdhomerun

./: INSTALL.md  README.md
hdhomerun_config_gui/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  hdhomerun_config.glade  hdhomerun_config.gladep
hdhomerun_config_gui/OSX/: Info.plist  hdhomerun_config_gui.bundle  hdhr.icns
hdhomerun_config_gui/OSX/English.lproj/: ._InfoPlist.strings  InfoPlist.strings
hdhomerun_config_gui/OSX/hdhomerun_config_gui.xcodeproj/: project.pbxproj
hdhomerun_config_gui/WIN/: gtkmm-vc90-2_4.vsprops  gtkmm-vc90-d-2_4.vsprops  hdhomerun_config_gui.rc  hdhomerun_config_gui.sln  hdhomerun_config_gui.vcproj  libhdhomerun.vcproj  resource.h
hdhomerun_config_gui/src/: AppInclude.h  Debug.cpp  Debug.h  Devices.cpp  Devices.h  HDHRConfig.cpp  HDHRConfig.h  Makefile.am  Makefile.in  Viewer.cpp  Viewer.h  callbacks.cpp  callbacks.h  interface.cpp  interface.h  main.cpp  support.cpp  support.h
